# migrate_wavvoxlibrary_in_AndroidStudio

./: README.md
migrate_wavvoxlibrary/VoxDigits13_SDK  (AndroidStudio 2.3.3)/: build.gradle
migrate_wavvoxlibrary/VoxDigits13_SDK  (AndroidStudio 2.3.3)/gradle/wrapper/: gradle-wrapper.properties
migrate_wavvoxlibrary/VoxDigits13_SDK  (AndroidStudio 2.3.3)/wavvoxlibrary/: build.gradle
migrate_wavvoxlibrary/VoxDigits13_SDK  (AndroidStudio 3.4.1)/: build.gradle  settings.gradle
migrate_wavvoxlibrary/VoxDigits13_SDK  (AndroidStudio 3.4.1)/gradle/wrapper/: gradle-wrapper.properties
migrate_wavvoxlibrary/VoxDigits13_SDK  (AndroidStudio 3.4.1)/wavvoxlibrary/: build.gradle
migrate_wavvoxlibrary/VoxDigits13_SDK  (AndroidStudio 3.4.1)/wavvoxlibrary/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt
